ElecatPlusIDE/src/Analizadores/SimpleParser.java
package Analizadores;
// Generated from Simple.g4 by ANTLR 4.13.1

import java.util.Arrays;
import java.util.HashMap;
import java.util.HashSet;
import java.util.Map;
import java.util.Set;
import java.util.Stack;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SimpleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMENTARIO_LINEA=1, COMENTARIO_BLOQUE=2, ID=3, DECIMAL=4, ENTERO=5, CADENA=6, 
		ESCRIBIR=7, GIRAR=8, PROGRAMA=9, ACCION=10, COMPONENTE=11, DIRECCION=12, 
		OP_LOGICO=13, OP_COMPARADOR=14, OP_ARITMETICO=15, NOT=16, TIEMPO=17, SI=18, 
		SI_NO=19, REPETIR=20, MIENTRAS=21, TIPO_DATO=22, TD_DECIMAL=23, TD_ENTERO=24, 
		TD_CARACTER=25, TD_CADENA=26, TD_BOOLEANO=27, FIN_LINEA=28, SIGNO_IGUAL=29, 
		BOOLEANO=30, BRACKET_ABRIR=31, BRACKET_CERRAR=32, PAR_ABRIR=33, PAR_CERRAR=34, 
		ESPERAR=35, COMA=36, WS=37;
	public static final int
		RULE_programa = 0, RULE_sentencia = 1, RULE_declaracion = 2, RULE_asignacion = 3, 
		RULE_condicionalif = 4, RULE_cicloWhile = 5, RULE_accion = 6, RULE_esperar = 7, 
		RULE_girar = 8, RULE_escribir = 9, RULE_termino = 10, RULE_expresion = 11, 
		RULE_operacionBinaria = 12, RULE_numero = 13, RULE_op_bin = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "sentencia", "declaracion", "asignacion", "condicionalif", 
			"cicloWhile", "accion", "esperar", "girar", "escribir", "termino", "expresion", 
			"operacionBinaria", "numero", "op_bin"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, "'escribir'", "'gira'", "'programa'", 
			"'accion'", null, null, null, null, null, "'not'", null, "'si'", "'si_no'", 
			"'repetir'", "'mientras'", null, "'decimal'", "'entero'", "'caracter'", 
			"'cadena'", "'booleano'", "';'", "'='", null, "'{'", "'}'", "'('", "')'", 
			"'esperar'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMENTARIO_LINEA", "COMENTARIO_BLOQUE", "ID", "DECIMAL", "ENTERO", 
			"CADENA", "ESCRIBIR", "GIRAR", "PROGRAMA", "ACCION", "COMPONENTE", "DIRECCION", 
			"OP_LOGICO", "OP_COMPARADOR", "OP_ARITMETICO", "NOT", "TIEMPO", "SI", 
			"SI_NO", "REPETIR", "MIENTRAS", "TIPO_DATO", "TD_DECIMAL", "TD_ENTERO", 
			"TD_CARACTER", "TD_CADENA", "TD_BOOLEANO", "FIN_LINEA", "SIGNO_IGUAL", 
			"BOOLEANO", "BRACKET_ABRIR", "BRACKET_CERRAR", "PAR_ABRIR", "PAR_CERRAR", 
			"ESPERAR", "COMA", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Simple.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    final Map<String, Token> variablesDeclaradas = new HashMap<>();
	    Stack<Token> salida = new Stack<>();
	    Stack<Token> pilaOperadores = new Stack<>();
	    boolean isDeclaration = false;
	    Token t;
	    final Set<Integer> booleanos = new HashSet<Integer>(Arrays.asList(TD_BOOLEANO, BOOLEANO));
	    final Set<Integer> enteros = new HashSet<>(Arrays.asList(TD_ENTERO, ENTERO));
	    final Set<Integer> decimales = new HashSet<>(Arrays.asList(DECIMAL, TD_DECIMAL));
	    final Set<Integer> operadores = new HashSet<>(Arrays.asList(OP_ARITMETICO, OP_COMPARADOR, OP_LOGICO));

	    // #region CódigoSemántico
	    void imprimirPila(Stack<Token> xdd) {
	        Stack<Token> x = (Stack<Token>) xdd.clone();
	        String xd = "";
	        while (!x.empty()) {
	            xd += x.pop().getText() + " ";
	        }
	        System.out.println(xd);
	    }

	    boolean resolverPila(HashSet<Integer> tipos) {
	        invertirSalida();
	        imprimirPila(salida);
	        // Para leer de izquierda a derecha y no de derecha a izquierda (como llega)
	        if (salida.size() == 1) {
	            Token t = salida.pop();
	            return tipos.contains(t.getType());
	        }
	        Stack<Token> t = new Stack<>();
	        while (!salida.empty()) {
	            if (salida.peek().getType() >= OP_LOGICO && salida.peek().getType() <= OP_ARITMETICO) {
	                t.push(salida.pop());
	            } else {
	                try {
	                    t.push(validarOperacion(t.pop(), t.pop(), salida.pop()));
	                } catch (Exception e) {
	                    return false;
	                }
	            }
	        }
	        return tipos.contains(t.pop().getType());
	    }

	    private Token validarOperacion(Token operando1, Token operando2, Token operador) throws Exception {
	        try {
	            if (operador.getType() == OP_LOGICO) {
	                if (!booleanos.contains(operando1.getType()) || !booleanos.contains(operando2.getType())) {
	                    throw new Exception();
	                }
	                return new CommonToken(BOOLEANO, "booleano");
	            } else if (operador.getType() == OP_ARITMETICO || operador.getType() == OP_COMPARADOR) {
	                byte d = 0;
	                d += decimales.contains(operando1.getType()) ? 1 : 0;
	                d += decimales.contains(operando2.getType()) ? 2 : 0;
	                switch (d) {
	                    case 0:
	                        if (!enteros.contains(operando1.getType()) && !enteros.contains(operando2.getType()))
	                            throw new Exception();
	                        return new CommonToken(operador.getType() == OP_ARITMETICO ? (operador.getText().equals("/"))? DECIMAL : ENTERO : BOOLEANO, "valor");
	                    case 1:
	                        if (!enteros.contains(operando2.getType()))
	                            throw new Exception();
	                        break;
	                    case 2:
	                        if (!enteros.contains(operando1.getType()))
	                            throw new Exception();
	                        break;
	                    default:
	                        break;
	                }
	                return new CommonToken(operador.getType() == OP_ARITMETICO ? DECIMAL : BOOLEANO, "valor");
	            }
	        } catch (Exception e) {
	            String err = "Operación inválida: '" + operando1.getText() + " " + operador.getText() + " "
	                    + operando2.getText() + "'";
	            err += "\nTipos de dato incompatibles: '" + operando1.getType() + " " + operador.getText() + " "
	                    + operando2.getType() + "'";
	            err += "\nLínea: " + operador.getLine() + ", " + operador.getCharPositionInLine();
	            System.out.println(err);
	            throw e;
	        }
	        return null;
	    }

	    private void invertirSalida() {
	        while (!pilaOperadores.empty()) {
	            salida.push(pilaOperadores.pop());
	        }
	        // Sacar el resto de operadores de la pila
	        Stack<Token> invertido = new Stack<>();
	        while (!salida.empty()) {
	            invertido.push(salida.pop());
	        }
	        salida = invertido;
	    }

		boolean operando(int tipo){
			return booleanos.contains(tipo) || enteros.contains(tipo) || decimales.contains(tipo);
		}

	    // Funcion para añadir a la pila semántica
	    void añadirAPila(Token t) {
	        if (t == null)
	            return;
	        int type = t.getType();
	        if (type == ID) {
	            salida.push(variablesDeclaradas.get(t.getText()));
	        } else if (operando(type)) {
	            salida.push(t);
	        } else if (operadores.contains(type)) {
	            while (!pilaOperadores.empty()
	                    && precedencia(pilaOperadores.peek().getText()) >= precedencia(t.getText())) {
	                salida.push(pilaOperadores.pop());
	            }
	            pilaOperadores.push(t);
	        } else if (type == PAR_ABRIR) {
	            pilaOperadores.push(t);
	        } else if (type == PAR_CERRAR) {
	            while (!pilaOperadores.empty() && pilaOperadores.peek().getType() != PAR_ABRIR) {
	                salida.push(pilaOperadores.pop());
	            }
	            if (!pilaOperadores.empty() && pilaOperadores.peek().getType() == PAR_ABRIR)
	                pilaOperadores.pop();
	        }
	    }

	    private int precedencia(String text) {
	        switch (text) {
	            case "+":
	            case "-":
	            case "or":
				case "==":
				case "!=":
				case "<":
				case "<=":
				case ">":
				case ">=":
	                return 1;
	            case "*":
	            case "/":
	            case "and":
	                return 2;
	            default:
	                return -1;
	        }
	    }

	    // Predicado semántico para verificar si una variable se ha declarado al
	    // intentar declararla
	    boolean variableDeclarada(Token variable, Token tipoVariable) {
	        if (!isDeclaration)
	            return false;
	        String nombreVariable = variable.getText();
	        if (variablesDeclaradas.containsKey(nombreVariable))
	            return true;
	        variablesDeclaradas.put(nombreVariable, tipoVariable);
	        return false;
	    }

	    // Predicado semántico para verificar si una variable se ha declarado al
	    // intentar declararla
	    boolean usarVariable(Token variable) {
	        return variablesDeclaradas.containsKey(variable.getText());
	    }
	    // #endregion

	public SimpleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode PROGRAMA() { return getToken(SimpleParser.PROGRAMA, 0); }
		public TerminalNode ID() { return getToken(SimpleParser.ID, 0); }
		public TerminalNode BRACKET_ABRIR() { return getToken(SimpleParser.BRACKET_ABRIR, 0); }
		public TerminalNode BRACKET_CERRAR() { return getToken(SimpleParser.BRACKET_CERRAR, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			match(PROGRAMA);
			setState(31);
			match(ID);
			setState(32);
			match(BRACKET_ABRIR);
			setState(34); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(33);
					sentencia();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(36); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(39); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(38);
				sentencia();
				}
				}
				setState(41); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 34365246472L) != 0) );
			setState(43);
			match(BRACKET_CERRAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaContext extends ParserRuleContext {
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public CondicionalifContext condicionalif() {
			return getRuleContext(CondicionalifContext.class,0);
		}
		public CicloWhileContext cicloWhile() {
			return getRuleContext(CicloWhileContext.class,0);
		}
		public AccionContext accion() {
			return getRuleContext(AccionContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentencia);
		try {
			setState(50);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMPONENTE:
			case TIPO_DATO:
				enterOuterAlt(_localctx, 1);
				{
				setState(45);
				declaracion();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(46);
				asignacion();
				}
				break;
			case SI:
				enterOuterAlt(_localctx, 3);
				{
				setState(47);
				condicionalif();
				}
				break;
			case REPETIR:
				enterOuterAlt(_localctx, 4);
				{
				setState(48);
				cicloWhile();
				}
				break;
			case ACCION:
			case ESPERAR:
				enterOuterAlt(_localctx, 5);
				{
				setState(49);
				accion();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionContext extends ParserRuleContext {
		public Token t;
		public Token ID;
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public TerminalNode TIPO_DATO() { return getToken(SimpleParser.TIPO_DATO, 0); }
		public TerminalNode COMPONENTE() { return getToken(SimpleParser.COMPONENTE, 0); }
		public TerminalNode ID() { return getToken(SimpleParser.ID, 0); }
		public TerminalNode FIN_LINEA() { return getToken(SimpleParser.FIN_LINEA, 0); }
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			 isDeclaration = true; 
			setState(55);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TIPO_DATO:
				{
				setState(53);
				((DeclaracionContext)_localctx).t = match(TIPO_DATO);
				}
				break;
			case COMPONENTE:
				{
				setState(54);
				((DeclaracionContext)_localctx).t = match(COMPONENTE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			t = ((DeclaracionContext)_localctx).t;
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				{
				setState(58);
				((DeclaracionContext)_localctx).ID = match(ID);
				setState(59);
				if (!( !variableDeclarada(((DeclaracionContext)_localctx).ID,((DeclaracionContext)_localctx).t) )) throw new FailedPredicateException(this, " !variableDeclarada($ID,$t) ");
				setState(60);
				match(FIN_LINEA);
				}
				}
				break;
			case 2:
				{
				setState(61);
				asignacion();
				}
				break;
			}
			 isDeclaration = false;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsignacionContext extends ParserRuleContext {
		public Token ID;
		public TerminalNode ID() { return getToken(SimpleParser.ID, 0); }
		public TerminalNode SIGNO_IGUAL() { return getToken(SimpleParser.SIGNO_IGUAL, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode FIN_LINEA() { return getToken(SimpleParser.FIN_LINEA, 0); }
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_asignacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			((AsignacionContext)_localctx).ID = match(ID);
			setState(67);
			if (!( !variableDeclarada(((AsignacionContext)_localctx).ID,t) )) throw new FailedPredicateException(this, " !variableDeclarada($ID,t) ");
			setState(68);
			if (!( usarVariable(((AsignacionContext)_localctx).ID) )) throw new FailedPredicateException(this, " usarVariable($ID) ");
			setState(69);
			match(SIGNO_IGUAL);
			setState(70);
			expresion();
			setState(71);
			if (!(resolverPila(new HashSet<>(Arrays.asList(variablesDeclaradas.get((((AsignacionContext)_localctx).ID!=null?((AsignacionContext)_localctx).ID.getText():null)).getType())))
					)) throw new FailedPredicateException(this, "resolverPila(new HashSet<>(Arrays.asList(variablesDeclaradas.get($ID.text).getType())))\r\n\t\t");
			setState(72);
			match(FIN_LINEA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondicionalifContext extends ParserRuleContext {
		public List<TerminalNode> SI() { return getTokens(SimpleParser.SI); }
		public TerminalNode SI(int i) {
			return getToken(SimpleParser.SI, i);
		}
		public List<TerminalNode> PAR_ABRIR() { return getTokens(SimpleParser.PAR_ABRIR); }
		public TerminalNode PAR_ABRIR(int i) {
			return getToken(SimpleParser.PAR_ABRIR, i);
		}
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public List<TerminalNode> PAR_CERRAR() { return getTokens(SimpleParser.PAR_CERRAR); }
		public TerminalNode PAR_CERRAR(int i) {
			return getToken(SimpleParser.PAR_CERRAR, i);
		}
		public List<TerminalNode> BRACKET_ABRIR() { return getTokens(SimpleParser.BRACKET_ABRIR); }
		public TerminalNode BRACKET_ABRIR(int i) {
			return getToken(SimpleParser.BRACKET_ABRIR, i);
		}
		public List<TerminalNode> BRACKET_CERRAR() { return getTokens(SimpleParser.BRACKET_CERRAR); }
		public TerminalNode BRACKET_CERRAR(int i) {
			return getToken(SimpleParser.BRACKET_CERRAR, i);
		}
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public TerminalNode SI_NO() { return getToken(SimpleParser.SI_NO, 0); }
		public CondicionalifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicionalif; }
	}

	public final CondicionalifContext condicionalif() throws RecognitionException {
		CondicionalifContext _localctx = new CondicionalifContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_condicionalif);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(SI);
			setState(75);
			match(PAR_ABRIR);
			setState(76);
			expresion();
			setState(77);
			if (!(resolverPila(new HashSet<>(Arrays.asList(BOOLEANO,TD_BOOLEANO))))) throw new FailedPredicateException(this, "resolverPila(new HashSet<>(Arrays.asList(BOOLEANO,TD_BOOLEANO)))");
			setState(78);
			match(PAR_CERRAR);
			setState(79);
			match(BRACKET_ABRIR);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 34365246472L) != 0)) {
				{
				{
				setState(80);
				sentencia();
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(86);
			match(BRACKET_CERRAR);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SI_NO) {
				{
				setState(87);
				match(SI_NO);
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SI) {
					{
					setState(88);
					match(SI);
					setState(89);
					match(PAR_ABRIR);
					setState(90);
					expresion();
					setState(91);
					if (!(resolverPila(new HashSet<>(Arrays.asList(BOOLEANO,TD_BOOLEANO)))
									)) throw new FailedPredicateException(this, "resolverPila(new HashSet<>(Arrays.asList(BOOLEANO,TD_BOOLEANO)))\r\n\t\t\t\t");
					setState(92);
					match(PAR_CERRAR);
					}
				}

				setState(96);
				match(BRACKET_ABRIR);
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 34365246472L) != 0)) {
					{
					{
					setState(97);
					sentencia();
					}
					}
					setState(102);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(103);
				match(BRACKET_CERRAR);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CicloWhileContext extends ParserRuleContext {
		public TerminalNode REPETIR() { return getToken(SimpleParser.REPETIR, 0); }
		public TerminalNode MIENTRAS() { return getToken(SimpleParser.MIENTRAS, 0); }
		public TerminalNode PAR_ABRIR() { return getToken(SimpleParser.PAR_ABRIR, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode PAR_CERRAR() { return getToken(SimpleParser.PAR_CERRAR, 0); }
		public TerminalNode BRACKET_ABRIR() { return getToken(SimpleParser.BRACKET_ABRIR, 0); }
		public TerminalNode BRACKET_CERRAR() { return getToken(SimpleParser.BRACKET_CERRAR, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public CicloWhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cicloWhile; }
	}

	public final CicloWhileContext cicloWhile() throws RecognitionException {
		CicloWhileContext _localctx = new CicloWhileContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cicloWhile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(REPETIR);
			setState(107);
			match(MIENTRAS);
			setState(108);
			match(PAR_ABRIR);
			setState(109);
			expresion();
			setState(110);
			if (!(resolverPila(new HashSet<>(Arrays.asList(BOOLEANO,TD_BOOLEANO)))
					)) throw new FailedPredicateException(this, "resolverPila(new HashSet<>(Arrays.asList(BOOLEANO,TD_BOOLEANO)))\r\n\t\t");
			setState(111);
			match(PAR_CERRAR);
			setState(112);
			match(BRACKET_ABRIR);
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 34365246472L) != 0)) {
				{
				{
				setState(113);
				sentencia();
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(119);
			match(BRACKET_CERRAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
